############################
# v0.17.1-beta3 - dd mm 2021
## Nouvelles traductions
- Scandinavie
- Villes des Légations


############################
# v0.17.1-beta2 - 12 juin 2021
## Nouvelles traductions
- Liban
- Olympiades des Travailleurs
- Qing (partielle)
- Rhodésie (partielle)

## Perte de traductions
- Indes Orientales Néerlandaises (partielle)
- Scandinavie (partielle)
- Siam (refonte complète)
- Villes des Légations (partielle)

## Autre
- Application du patch 0.17.1 (mise à jour de plus de 10 000 lignes de traduction)

############################
# v0.17.1-beta1 - 29 avril 2021
## Nouvelles traductions
- Hawaï (partielle)
- Rhodésie (partielle)

## Autre
- Mise à jour avec la 0.17.1 (beaucoup de nouveaux textes en anglais)

############################
# v0.16.1-beta4 - 2 avril 2021
## Nouvelles traductions
- Qing (partielle)
- République Française
- Rhodésie (partielle)

## Autre
- Retour de la République Française dans les recommandations (c'est même désormais le choix par défaut)

############################
# v0.16.1-beta3 - 18 mars 2021
## Nouvelles traductions
- Irak
- Liban (partielle)
- République Française (partielle : moitié des événements)

############################
# v0.16.1-beta2 - 20 février 2021
## Nouvelles traductions
- Evénéments de la Guerre Civile Américaine
- République Française (partielle : quelques priorités)

## Autre
- Agrandissement de la fenêtre annonçant qu'un pays rejoint une faction
- Diverses corrections (notamment pour la République Socialiste d'Italie)

############################
# v0.16.1-beta1 - 6 février 2021
## Nouvelles traductions
- Chypre
- République Française (partielle)
- Ruthénie Blanche (partielle)

## Autre
- Mise à jour de la traduction par rapport au patch 0.16.1 (Japon non mis à jour, nouveaux événements de Guerre Civile Américaine non traduits)
- Retrait du Japon des recommandations de départ (car plus traduit)
- Diverses corrections (notamment pour l'Empire allemand)
