@@ -12,13 +12,13 @@ japan_research_name:0 "Rikagaku Kenkyusho"
 japan_research_desc:0 "Rikagaku Kenkyusho est l'aile scientifique de la sphère de coprospérité qui vise à contribuer à l'enrichissement de nos colonies et de nos alliés".
 
 ### Naval Tooltips ###
- JAP_naval_investment:0 "£decision_icon_small New decisions to develop §YNaval building capacities§! of our allies will be unlocked."
- JAP_naval_prosperity_ships:0 "\n£decision_icon_small New decisions to develop the §YNaval Transport Capacities§! of our allies will be unlocked."
- JAP_naval_advisors:0 "£decision_icon_small New Decisions to develop the §YNaval Fighting Capacities§! of both us and our allies will be unlocked."
- JAP_naval_seize_docks:0 "£decision_icon_small New decisions to §YSeize Dockyards§! from our allies during wartime will be unlocked."
- JAP_invest_docks:0 "Has built dockyards in [From.GetNameDef]"
- JAP_not_send_advisor_last_180_days:0 "Not: We have already sent advisors to [From.GetNameDef] in the last six months."
- JAP_asked_to_send_advisor_last_365_days:0 "We have already asked for advisors to [From.GetNameDef] in the last year."
+ JAP_naval_investment:0 "£decision_icon_small De nouvelles décisions pour développer les §YCapacités de construction navale§! de nos alliés seront débloquées."
+ JAP_naval_prosperity_ships:0 "\n£decision_icon_small De nouvelles décisions pour développer les §YCapacités de Transport Naval§! de nos alliés seront débloquées."
+ JAP_naval_advisors:0 "£decision_icon_small De nouvelles décisions visant à développer les §YCapacités de Combat Naval§! de nos alliés et de nous-mêmes seront débloquées."
+ JAP_naval_seize_docks:0 "£decision_icon_small De nouvelles décisions pour §YSaisir des Chantiers Navals§! de nos alliés en temps de guerre seront débloquées."
+ JAP_invest_docks:0 "A construit des chantiers navals à [From.GetNameDef]."
+ JAP_not_send_advisor_last_180_days:0 "Non : Nous avons déjà envoyé des conseillers à [From.GetNameDef] au cours des six derniers mois."
+ JAP_asked_to_send_advisor_last_365_days:0 "Nous avons déjà demandé des conseillers à [From.GetNameDef] l'année dernière."
 
 ### Other Tooltips ###
 JAP_gain_claim_southern_islands:0 "§Y[JAP.GetNameDefCap]§! obtient une revendication sur §HSingapour§!, §H[1020.GetName]§! et toutes les §Yîles non américaines du Pacifique§! qui ne sont pas la propriété d'un allié ou d'un membre de sa sphère économique.\n"
@@ -33,8 +33,8 @@ HAW_resist_OOB_TOOLTIP:0 "§GNous allons mobiliser des troupes pour nous opposer
 KOR_pup_oob_tt:0 "§GNous mobiliserons de nouvelles divisions d'infanterie et de milice.§!\n"
 KOR_light_oob_tt:0 "§GNous mobiliserons de nouvelles divisions d'infanterie et de cavalerie, même si certaines seront simplement des milices glorifiées.§!\n"
 KOR_full_oob_tt:0 "§GNous allons mobiliser de nouvelles divisions d'infanterie et de cavalerie, toutes prêtes à se battre.§!\n"
- JAP_offered_peace_and_I_want:0 "§GWe will accept Japan's terms of peace.§!"
- JAP_offered_peace_and_I_hate_peace:0 "§RWe will reject Japan's terms of peace, and will not participate in any peace conferences.§!"
+ JAP_offered_peace_and_I_want:0 "§GNous accepterons les conditions de paix du Japon.§!"
+ JAP_offered_peace_and_I_hate_peace:0 "§RNous rejetterons les conditions de paix du Japon et ne participerons à aucune conférence de paix.§!"
 
 JAP_agree_reconstruction_anqing_tt:0 "Nous sommes d'accord pour aider Anqing. Ce faisant, nous engagerons d'importantes ressources politiques et économiques pour reconstruire Anqing, ce qui permettra à Anqing et à Fengtian de s'opposer plus tôt à Pékin."
 JAP_disagree_anqing_strategy_tt:0 "Nous ne sommes pas d'accord avec cela. Fengtian devra maintenant examiner différentes stratégies."
@@ -49,7 +49,7 @@ JAP_you_get_the_mils_back:0 "Vous récupérez les usines !"
 ETS_will_discuss_this:0 "[ETS.GetNameDefCap] deviendra plus amical avec nous"
  army_xp_more_than_10:0 "£army_experience §H10§!"
  army_xp_more_than_10_blocked:0 "£army_experience §R10§!"
- army_xp_more_than_10_tooltip:0 "It costs $army_xp_more_than_10_blocked$ to take the decision"
+ army_xp_more_than_10_tooltip:0 "Cela coûte $army_xp_plus_que_10_blocked$ pour prendre la décision"
 pacific_containment:0 "Nous devons contenir l'agression japonaise !"
 JAP_backed_down_pacific:0 " Recul des revendications sur les îles du Pacifique "
 
@@ -134,7 +134,7 @@ JAP_ally14_last:0 "§Y[?global.asian_economic_sphere^13.GetFlag][?global.asian_e
 JAP_ally15_last:0 "§Y[?global.asian_economic_sphere^14.GetFlag][?global.asian_economic_sphere^14.GetName]§! "
 JAP_ally_none:0 ""
 JAP_ally_no_sphere:0 "Aucun"
- JAP_invest_timer:0 "Has not been target of investment within the last twelve months"
+ JAP_invest_timer:0 "N'a pas été la cible d'investissements au cours des douze derniers mois"
 
 ### Ideas ###
  JAP_rising_sun_idea_1:0 "Gloire Impériale"
@@ -193,7 +193,7 @@ JAP_trade_embargoed:0 "Embargo japonais"
 
 ### Focuses - Foreign - Base ###
  JAP_rising_sun:0 "Hakkou Ichiu"
- JAP_rising_sun_desc:0 "Japan's correct direction on the world stage has long been debated between military scholars and ideologues alike but all agree, is all the world not better when it is under one roof?"
+ JAP_rising_sun_desc:0 "L'orientation correcte du Japon sur la scène mondiale fait depuis longtemps l'objet de débats entre les spécialistes militaires et les idéologues, mais tous s'accordent à dire que le monde entier n'est-il pas meilleur lorsqu'il se trouve sous un même toit ?"
 
 ### Focuses - Nanshin-ron ###
 JAP_go_south:0 "Nanshin-ron"
@@ -280,20 +280,20 @@ JAP_invest_in_sphere_member2:0 "Promouvoir l'investissement dans [From.GetNameDe
 JAP_invest_in_sphere_member2_desc:0 "Nous devrions commencer à investir dans [From.GetNameDef], ce qui non seulement nous donnera un accès plus facile à leur commerce mais nous permettra également de construire une présence japonaise dans le pays et, éventuellement, de la reprendre de l'intérieur."
 JAP_invest_in_sphere_member3:0 "Promouvoir l'investissement dans [From.GetNameDef]"
 JAP_invest_in_sphere_member3_desc:0 "Nous devrions commencer à investir dans [From.GetNameDef], ce qui non seulement nous donnera un accès plus facile à leur commerce mais nous permettra également de construire une présence japonaise dans le pays et, éventuellement, de la reprendre de l'intérieur."
- JAP_invest_in_sphere_member_docks:0 "Promote Naval Investment in [From.GetNameDef]"
- JAP_invest_in_sphere_member_docks_desc:0 "We should begin investment in [From.GetNameDef], which will not only give us easier access to their trade but will allow us to build a Japanese presence in the country and, eventually, take it over from the inside."
- JAP_invest_in_sphere_naval_advisors:0 "Send naval advisors to [From.GetNameDef]"
- JAP_invest_in_sphere_naval_advisors_desc:0 "We should send advisors to [From.GetNameDef], which will help with development of their naval base."
- JAP_invest_in_sphere_prosperity_ships:0 "Share prosperity ship plans with [From.GetNameDef]"
- JAP_invest_in_sphere_prosperity_ships_desc:0 "We should send "Prosperity" ship engineers to [From.GetNameDef], which will help with development of their naval transport base."
- JAP_invest_in_sphere_take_dockyards:0 "Take over [From.GetNameDef] dockyards"
- JAP_invest_in_sphere_take_dockyards_desc:0 "Our naval yards in the Home Islands currently struggle to fulfil the IJA's needs. Now we must make use of the facilities we built for our junior partners in the Co-Prosperity Sphere. All for their own protection, of course."
+ JAP_invest_in_sphere_member_docks:0 "Promouvoir l'investissement naval dans [From.GetNameDef]"
+ JAP_invest_in_sphere_member_docks_desc:0 "Nous devrions commencer à investir dans [From.GetNameDef], ce qui nous permettra non seulement d'accéder plus facilement à leur commerce, mais aussi d'établir une présence japonaise dans le pays et, éventuellement, de le prendre en charge de l'intérieur."
+ JAP_invest_in_sphere_naval_advisors:0 "Envoyer des conseillers navals à [From.GetNameDef]"
+ JAP_invest_in_sphere_naval_advisors_desc:0 "Nous devrions envoyer des conseillers à [From.GetNameDef], qui aideront au développement de leur base navale."
+ JAP_invest_in_sphere_prosperity_ships:0 "Partager les plans du navire du Prospérité avec [From.GetNameDef]."
+ JAP_invest_in_sphere_prosperity_ships_desc:0 "Nous devrions envoyer des ingénieurs du navire \"Prospérité\" à [From.GetNameDef], ce qui aidera au développement de leur base de transport naval."
+ JAP_invest_in_sphere_take_dockyards:0 "Prendre le contrôle des arsenaux [From.GetNameDef]."
+ JAP_invest_in_sphere_take_dockyards_desc:0 "Nos chantiers navals dans les îles d'origine peinent actuellement à répondre aux besoins de l'IJA. Nous devons maintenant utiliser les installations que nous avons construites pour nos jeunes partenaires de la Sphère de Co-Prospérité. Tout cela pour leur propre protection, bien sûr."
 JAP_economic_sphere_takeover:0 "Prendre le relais [From.GetNameDef]" 
 JAP_economic_sphere_takeover_desc:0 "Notre pénétration économique de [From.GetNameDef] s'est développée au point que [Root.GetNameDef] les domine entièrement. Le gouvernement [From.GetAdjective] est déjà soumis à nos souhaits... il ne reste plus qu'à se débarrasser de la fiction polie de leur indépendance".
 JAP_co_prosperity_member_decisions:0 "La sphère de coprospérité japonaise"
 JAP_co_prosperity_member_decisions_desc:0 "La sphère de coprospérité est composée d'une partie d'alliance militaire et d'une partie de coopération économique - bien que ces deux aspects soient dominés par [JAP.GetNameDef], qui domine l'Asie de l'Est. Les Japonais sont déterminés à lutter contre l'empiètement de l'impérialisme occidental, même si - dans une certaine mesure - cela signifie qu'ils deviennent eux-mêmes impérialistes".
  JAP_join_rikagaku_kenkyusho:0 "Rejoindre le groupe de recherche Riken"
- JAP_request_nav_advisors:0 "Request Naval Advisors"
+ JAP_request_nav_advisors:0 "Demande de conseillers navals"
 JAP_withdraw_from_alliance:0 "Se retirer de l'alliance militaire"
 JAP_withdraw_from_alliance_desc:0 "Nous n'avons plus besoin de notre alliance militaire avec [JAP.GetNameDef]. Mettons-y fin maintenant".
 JAP_withdraw_from_sphere:0 "Se retirer de la sphère économique"
@@ -358,7 +358,7 @@ harbin_chemical_research:0 " Recherche chimique de Harbin"
 changchun_industry_investment:0 "La région industrielle de Jilin"
 
 ### Military ###
- JAP_ichigo_tooltip:0 "Gains '§H$JAP_ichigo$§!' which grants (Attack bonus against §Hall Chinese countries§!: [?0.1|+=%1], Defence bonus against §Hall Chinese countries§!: [?0.05|+=%1]) for §H100§! days."
+ JAP_ichigo_tooltip:0 "Gagne \"§H$JAP_ichigo$§!\" qui donne (Bonus d'Attaque contre §Htous les pays Chinois§!: [?0.1|+=%1], Bonus de Défense contre §Htous les pays Chinois§!: [?0.05|+=%1]) pour §H100§! jours."
 
 ### Events ###
 japfor.1.t:0 "Mantetsu déclare des gains records"
@@ -524,7 +524,7 @@ japfor.57.a:0 "Nous les détruirons, quoi qu'il arrive."
 japfor.57.b:0 "Reculez, nous pourrons revenir plus tard."
 
 japfor.5701.t:0 "Les Japonais reculent"
- japfor.5701.d:0 "Apparemment, les Japonais n'ont pas voulu se mettre à l'épreuve. Ils ont renoncé à leurs menaces, du moins pour l'instant."
+ japfor.5701.d:0 "Apparemment, les Japonais n'ont pas voulu nous mettre à l'épreuve. Ils ont renoncé à leurs menaces, du moins pour l'instant."
 japfor.5701.a:0 "C'est un soulagement."
 
 japfor.58.t:0 "Les Philippines résistent !"
@@ -902,9 +902,9 @@ japfor.235.t:0 "Le Japon a capitulé !"
 japfor.235.d:0 "Sous l'assaut de toutes les parties, [JAP.GetNameDef] a signé un traité de paix après une conférence de deux semaines à [GetDalianName], préservant les îles de l'invasion... mais aussi jetant [Root.GetNameDef] aux vents. L'alliance japonaise s'est effondrée, et nous devons maintenant nous battre contre nous-mêmes."
 japfor.235.a:0 "Je pensais qu'ils étaient plus forts que ça..."
 
- japfor.237.t:0 "The Imperial Japanese Navy Seizes the Moment"
- japfor.237.d:0 "Due to the army's capitulation on the mainland, the IJN has been quick to assert its greatly increased relevance to the defence of the Home Islands. Army generals and their associates in the War Ministry have raised quite a fuss, but few disagree that the navy must stand guard as Japan rebuilds. It seems certain that they will receive a greater share of Japan's national resources than they might have previously."
- japfor.237.a:0 "The navy must become an impenetrable shield!"
+ japfor.237.t:0 "La marine impériale japonaise saisit l'occasion"
+ japfor.237.d:0 "En raison de la capitulation de l'armée sur le continent, l'IJN n'a pas tardé à affirmer sa pertinence accrue dans la défense des îles intérieures. Les généraux de l'armée et leurs associés du ministère de la Guerre ont fait beaucoup de bruit, mais rares sont ceux qui contestent le fait que la marine doit monter la garde pendant que le Japon se reconstruit. Il semble certain qu'elle recevra une plus grande part des ressources nationales du Japon qu'auparavant."
+ japfor.237.a:0 "La marine doit devenir un bouclier impénétrable !"
 
 # Involving Anqing #
 
@@ -1027,41 +1027,41 @@ japfor.412.t:0 "Se retirer de la sphère japonaise"
 japfor.412.d:0 "Avec notre adhésion à [Root.GetFactionName], nous ne pouvons plus être considérés comme faisant partie de la sphère économique du Japon."
 japfor.412.a:0 "Qu'il en soit ainsi !"
 
- japfor.420.t:0 "Investors Build Dockyards"
- japfor.420.d:0 "The Japanese investors in [Root.GetNameDef] have been busy creating new dockyards - a measurable benefit from our participation in the Asian Co-Prosperity Sphere it seems."
- japfor.420.a:0 "Very nice!"
+ japfor.420.t:0 "Des investisseurs construisent des chantiers navals"
+ japfor.420.d:0 "Les investisseurs japonais de [Root.GetNameDef] ont été occupés à créer de nouveaux chantiers navals - un avantage mesurable de notre participation à la Sphère de coprospérité asiatique, semble-t-il."
+ japfor.420.a:0 "Très bien !"
 
- japfor.421.t:0 "Japan Sends Naval Advisors"
- japfor.421.d:0 "As part of naval development program sponsored by Japanese Empire, group of Advisors came from Japan to aid us with our naval program. They are highly knowledgable in many aspects, so it is up to use to direct them to where would be most useful."
- japfor.421.a:0 "Direct them to assist our engineers."
- japfor.421.b:0 "We could use the help of their tactical expertise."
- japfor.421.c:0 "Some practical experience from training exercises would be best."
+ japfor.421.t:0 "Le Japon envoie des conseillers navals"
+ japfor.421.d:0 "Dans le cadre du programme de développement naval parrainé par l'Empire japonais, un groupe de conseillers est venu du Japon pour nous aider dans notre programme naval. Ils sont très compétents dans de nombreux domaines, c'est donc à nous de les diriger là où ils seront le plus utiles."
+ japfor.421.a:0 "Demandez-leur d'aider nos ingénieurs."
+ japfor.421.b:0 "Nous pourrions utiliser l'aide de leur expertise tactique."
+ japfor.421.c:0 "Une expérience pratique acquise lors d'exercices de formation serait la meilleure solution."
 
- japfor.422.t:0 "First Prosperity Ships"
- japfor.422.d:0 "The Japanese engineers which came to [Root.GetNameDef] have been busy teaching our dockyard workers how to build modern Japanese cargo ships, so called "Prosperity ships" - a measurable benefit from our participation in the Asian Co-Prosperity Sphere it seems."
- japfor.422.a:0 "Great news!"
+ japfor.422.t:0 "Les premiers navires Prospérité"
+ japfor.422.d:0 "Les ingénieurs japonais qui sont venus à [Root.GetNameDef] ont été occupés à apprendre à nos dockers comment construire des cargos japonais modernes, appelés "navires Prospérité" - un avantage mesurable de notre participation à la sphère de coprospérité asiatique, semble-t-il."
+ japfor.422.a:0 "Grande nouvelle !"
 
- japfor.423.t:0 "Japan Wants Control of our Dockyards"
- japfor.423.d:0 "The Japanese army and naval official this morning officially demanded control of all dockyards built by their companies in our country. They are reasoning that during these hard wartimes, naval production must be unified under their command."
- japfor.423.a:0 "Very well."
- japfor.423.b:0 "Who do they think they are?"
+ japfor.423.t:0 "Le Japon veut contrôler nos chantiers navals"
+ japfor.423.d:0 "Ce matin, les responsables de l'armée et de la marine japonaises ont officiellement demandé le contrôle de tous les chantiers navals construits par leurs entreprises dans notre pays. Ils estiment qu'en ces temps de guerre difficiles, la production navale doit être unifiée sous leur commandement."
+ japfor.423.a:0 "Très bien."
+ japfor.423.b:0 "Qui pensent-ils être ?"
 
- japfor.424.t:0 "Japan Returns Dockyards to Us"
- japfor.424.d:0 "As our common threat is no more there is no legal reason for Japan to have control over our dockyards any more and as such they have returned them to us."
- japfor.424.a:0 "A surprise to be sure, but a welcome one."
+ japfor.424.t:0 "Le Japon nous rend ses chantiers navals"
+ japfor.424.d:0 "Comme notre menace commune n'existe plus, il n'y a plus de raison légale pour que le Japon ait le contrôle de nos chantiers navals et c'est pourquoi ils nous les ont rendus."
+ japfor.424.a:0 "Une surprise, certes, mais une surprise bienvenue."
 
- japfor.425.t:0 "[From.GetNameDefCap] Asks for Naval Advisors"
- japfor.425.d:0 "This morning we received request from [From.GetNameDef] to send small number of our advisors to help in their naval development."
- japfor.425.a:0 "A worthy request."
- japfor.425.b:0 "Oh, I don't think so."
+ japfor.425.t:0 "[From.GetNameDefCap] demande de conseillers navals"
+ japfor.425.d:0 "Ce matin, nous avons reçu une demande de [From.GetNameDef] pour envoyer un petit nombre de nos conseillers afin de les aider dans leur développement naval."
+ japfor.425.a:0 "Une demande digne d'intérêt."
+ japfor.425.b:0 "Oh, je ne pense pas."
 
- japfor.426.t:0 "Japan Denies Our Request"
- japfor.426.d:0 "Sadly Japan has denied our request to send us naval advisors."
- japfor.426.a:0 "A shame."
+ japfor.426.t:0 "Le Japon rejette notre demande"
+ japfor.426.d:0 "Malheureusement, le Japon a refusé notre demande d'envoyer des conseillers navals."
+ japfor.426.a:0 "Une honte."
 
- japfor.427.t:0 "[From.GetNameDefCap] Denies Control of Dockyards"
- japfor.427.d:0 "In a truly audacious move, we have been denied control of the very dockyards we worked to create. While it would be diplomatically ill-advised to react straight away, we will not forget this betrayal. They will regret this."
- japfor.427.a:0 "So much for being allies."
+ japfor.427.t:0 "[From.GetNameDefCap] refuse de transférer le contrôle de ses chantiers navals."
+ japfor.427.d:0 "Dans un geste vraiment audacieux, on nous a refusé le contrôle des chantiers navals pour lesquels nous avons travaillé. Bien qu'il serait diplomatiquement peu judicieux de réagir immédiatement, nous n'oublierons pas cette trahison. Ils vont le regretter."
+ japfor.427.a:0 "Tant pis pour les alliés."
 
 japfor.450.t:0 "Embargos sur le Japon [Root.GetNameDef] !"
 japfor.450.d:0 "Pendant des mois, nous nous sommes inquiétés de l'ampleur des ambitions japonaises et de leurs actions agressives dans le Pacifique Sud, et nous avons maintenant des raisons de l'être. Ils ont déclaré leur intention de diriger leur sphère d'influence pour mettre immédiatement fin au commerce avec [Root.GetNameDef], nous qualifiant d'"avant-poste du colonialisme et de l'impérialisme européens en Asie". Il ne faut pas sous-estimer la pression que cela pourrait faire peser sur notre économie..."
@@ -1134,7 +1134,7 @@ japfor.465.d:0 "Il est désormais de notoriété publique que nos ennemis sont b
 japfor.465.a:0 "Il faut avoir le temps de le retourner..."
 
 japfor.466.t:0 "Nous avons une force écrasante"
- japfor.466.d:0 "Il est devenu de plus en plus évident pour nous et pour le Japon que nos forces sont bien plus nombreuses que les leurs. Alors que la nouvelle de cette situation se répand dans le grand public japonais, l'agitation augmente et le soutien à leur gouvernement diminue. Si nous conservons cet avantage, ils capituleront plus tôt que nous ne l'espérions."
+ japfor.466.d:0 "Il est devenu de plus en plus évident pour nous et pour le Japon que nos forces sont bien plus nombreuses que les leurs. Alors que la nouvelle de cette situation se répand dans le grand public japonais, l'agitation augmente et le soutien à leur gouvernement diminue. Si nous conservons cet avantage, ils capituleront sûrement plus tôt que nous ne l'espérions."
 japfor.466.a:0 "Quelle excellente nouvelle !"
 
 ### Fengtian Events ###
@@ -1152,33 +1152,33 @@ japfeng.3.d:0 "Le temps est venu de décider : où se situent nos intentions par
  japfeng.3.b:0 "...l'amadouer."
  japfeng.3.c:0 "...l'attendre."
 
- JAP_treaty_totalist:0 "Japanese Treaty Territories"
- JAP_treaty_totalist_ADJ:0 "Japanese"
- JAP_treaty_totalist_DEF:0 "the Japanese Treaty Territories"
- JAP_treaty_radical_socialist:0 "Japanese Treaty Territories"
- JAP_treaty_radical_socialist_ADJ:0 "Japanese"
- JAP_treaty_radical_socialist_DEF:0 "the Japanese Treaty Territories"
- JAP_treaty_syndicalist:0 "Japanese Treaty Territories"
- JAP_treaty_syndicalist_ADJ:0 "Japanese"
- JAP_treaty_syndicalist_DEF:0 "the Japanese Treaty Territories"
- JAP_treaty_social_democrat:0 "Japanese Treaty Territories"
- JAP_treaty_social_democrat_ADJ:0 "Japanese"
- JAP_treaty_social_democrat_DEF:0 "the Japanese Treaty Territories"
- JAP_treaty_social_liberal:0 "Japanese Treaty Territories"
- JAP_treaty_social_liberal_ADJ:0 "Japanese"
- JAP_treaty_social_liberal_DEF:0 "the Japanese Treaty Territories"
- JAP_treaty_market_liberal:0 "Japanese Treaty Territories"
- JAP_treaty_market_liberal_ADJ:0 "Japanese"
- JAP_treaty_market_liberal_DEF:0 "the Japanese Treaty Territories"
- JAP_treaty_social_conservative:0 "Japanese Treaty Territories"
- JAP_treaty_social_conservative_ADJ:0 "Japanese"
- JAP_treaty_social_conservative_DEF:0 "the Japanese Treaty Territories"
- JAP_treaty_authoritarian_democrat:0 "Japanese Treaty Territories"
- JAP_treaty_authoritarian_democrat_ADJ:0 "Japanese"
- JAP_treaty_authoritarian_democrat_DEF:0 "the Japanese Treaty Territories"
- JAP_treaty_paternal_autocrat:0 "Japanese Treaty Territories"
- JAP_treaty_paternal_autocrat_ADJ:0 "Japanese"
- JAP_remnant_paternal_autocrat_DEF:0 "the Japanese Treaty Territories"
- JAP_remnant_national_populist:0 "Japanese Treaty Territories"
- JAP_remnant_national_populist_ADJ:0 "Japanese"
- JAP_remnant_national_populist_DEF:0 "the Japanese Treaty Territories"
+ JAP_treaty_totalist:0 "Territoires du Traité Japonais"
+ JAP_treaty_totalist_ADJ:0 "Japonnais"
+ JAP_treaty_totalist_DEF:0 "les Territoires du Traité Japonais"
+ JAP_treaty_radical_socialist:0 "Territoires du Traité Japonais"
+ JAP_treaty_radical_socialist_ADJ:0 "Japonnais"
+ JAP_treaty_radical_socialist_DEF:0 "les Territoires du Traité Japonais"
+ JAP_treaty_syndicalist:0 "Territoires du Traité Japonais"
+ JAP_treaty_syndicalist_ADJ:0 "Japonnais"
+ JAP_treaty_syndicalist_DEF:0 "les Territoires du Traité Japonais"
+ JAP_treaty_social_democrat:0 "Territoires du Traité Japonais"
+ JAP_treaty_social_democrat_ADJ:0 "Japonnais"
+ JAP_treaty_social_democrat_DEF:0 "les Territoires du Traité Japonais"
+ JAP_treaty_social_liberal:0 "Territoires du Traité Japonais"
+ JAP_treaty_social_liberal_ADJ:0 "Japonnais"
+ JAP_treaty_social_liberal_DEF:0 "les Territoires du Traité Japonais"
+ JAP_treaty_market_liberal:0 "Territoires du Traité Japonais"
+ JAP_treaty_market_liberal_ADJ:0 "Japonnais"
+ JAP_treaty_market_liberal_DEF:0 "les Territoires du Traité Japonais"
+ JAP_treaty_social_conservative:0 "Territoires du Traité Japonais"
+ JAP_treaty_social_conservative_ADJ:0 "Japonnais"
+ JAP_treaty_social_conservative_DEF:0 "les Territoires du Traité Japonais"
+ JAP_treaty_authoritarian_democrat:0 "Territoires du Traité Japonais"
+ JAP_treaty_authoritarian_democrat_ADJ:0 "Japonnais"
+ JAP_treaty_authoritarian_democrat_DEF:0 "les Territoires du Traité Japonais"
+ JAP_treaty_paternal_autocrat:0 "Territoires du Traité Japonais"
+ JAP_treaty_paternal_autocrat_ADJ:0 "Japonnais"
+ JAP_remnant_paternal_autocrat_DEF:0 "les Territoires du Traité Japonais"
+ JAP_remnant_national_populist:0 "Territoires du Traité Japonais"
+ JAP_remnant_national_populist_ADJ:0 "Japonnais"
+ JAP_remnant_national_populist_DEF:0 "les Territoires du Traité Japonais"
