@@ -1,6 +1,7 @@
 ############################
 # v0.17.1-beta3 - dd mm 2021
 ## Nouvelles traductions
+- Japon (partielle)
 - Scandinavie
 - Villes des Légations
 
